fix: linenumbers still visible after switching off

--- a/src/code-block/styles.scss
+++ b/src/code-block/styles.scss
@@ -53,3 +53,11 @@ slot {
 .code-block:hover .copy-button {
     opacity: 1;
 }
+
+.line-numbers-rows {
+    display: none;
+}
+
+.line-numbers .line-numbers-rows {
+    display: block;
+}
